# willys-mcp

./: .gitignore  .repomixignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mcp-server.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
actions/: auth.ts  orders.ts
app/: page.tsx
components/: ChecklistItem.tsx  DeliverySlots.tsx  PickupSlots.tsx  SmartProductMatcher.tsx
docs/: mcp-implementation.md
lib/: database.ts  database.ts.bak  embeddings.ts  mcp-auth.ts  mcp-order-cache.ts  mcp-orders.ts  mcp-session-store.ts  order-details-fetcher.ts  puppeteer-auth.ts  puppeteer-auth.ts.bak  request-utils.ts  tool-policy.ts  types.ts
shim/: .env.example  .gitignore  pyproject.toml
shim/src/willys_mcp_shim/: auth.py  http_server.py  oauth.py
shim/tests/: test_e2e_local.py  test_token_ttl.py
tests/: test-all-mcp-tools.js  test-common-products.js  test-complete-flow.js  test-database-init.js  test-direct-common-products.js  test-direct-search.js  test-direct-smart-debug.js  test-direct-smart-search-error.js  test-direct-smart-search.js  test-e2e-comprehensive.js  test-fix.js  test-fixed-endpoints.js  test-manual-smart.js  test-minimal-database-path.js  test-offers.js  test-parsing-validation.js  test-pickup-direct.js  test-pickup-flow.js  test-product-detail-direct.js  test-product-detail.js  test-puppeteer.js  test-runner.js  test-search-direct.js  test-search-json-structure.js  test-search-with-auth.js  test-search.js  test-server-action.js  test-server-smart-search.js  test-smart-direct.js  test-smart-final.js  test-smart-focused.js  (+22 more)
(+32 files in other folders)
